2004-04-28  Pierre-Luc paour  <paour@users.sourceforge.net> 1.4.3-pl1-cvs-b7

	* gallery_remote2.php: when an album is set to not allow the user
	  to view full-sized pictures, but there is no resized picture,
	  do allow to view full-sized, because it's the same as resized.
	  This appears to be what the web UI does.

2004-04-26 Don Willingham <donwillingham@users.sf.net> 1.4.3-pl1-cvs-b6

	* Bugfix: Take the floor() of $wmAlignX and $wmAlignY in case they
		are not whole numbers. (from version 1.4.4-cvs-b42)

2004-04-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-pl1-cvs-b5

        * Fix: Adapted move_album issue from b1
          Until a ".root" album object can be created, move_album needs to
          not try and check getNestedAlbum against a rooted album.
          Added isRoot() check prior to getNestedAlbum to bypass.

2004-04-25 Jens Tkotz <jens@peino.de> 1.4.3-pl1-cvs-b4

	* Bugfix: Compatibility in edit_appearance with PHP <4.1.0, but >4.0.4 was broken.

2004-04-23 Jens Tkotz <jens@peino.de> 1.4.3-pl1-cvs-b3

	* Fix: Removed empty lines between ?> and <?php in applet.inc.
	       This caused warnings when Gallery is embedded and the Applet is installled.

2004-04-23 Jens Tkotz <jens@peino.de> 1.4.3-pl1-cvs-b2

	* Fix: Changed \" to &quot; in translateable text.
	       This conflicts with the substitute function for gettext on non gettext systems.

2004-04-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-pl1-cvs-b1

	* Fix: 'Move Album' bug detailed at
	  http://gallery.menalto.com/index.php?name=PNphpBB2&file=viewtopic&p=71680#71680

	* Change: Allow slideshow mode to be selected from config wizard.
	  (Defaults to 'high')

	* Change: Prevent an attempt to re-highlight an album with no highlight

2004-04-19  Chris Kelly <ckdake@users.sf.net> 1.4.3

	* v1.4.3 Release

2004-04-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-RC4-cvs-b1

	* Bugfix: added dirname(__FILE__) and $gallery->app->photoAlbumURL