@@ -1,4 +1,12 @@
-2004-04-28  Pierre-Luc paour  <paour@users.sourceforge.net> 1.4.3-pl1-cvs-b7
+2004-05-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.3-pl1-cvs-b8
+
+        * Fix: We now make the assumption, when loading the userdb, that 
+          the file is user_version 4.  This will ensure that if for some reason
+          (most notably, the userfile format revision from 1.3->1.4)
+          the correct version number is not unserialized from the file, that we
+          will perform the necessary file-format upgrade
+
+2004-04-28  Pierre-Luc paour  <paour@users.sourceforge.net> 
 
 	* gallery_remote2.php: when an album is set to not allow the user
 	  to view full-sized pictures, but there is no resized picture,
